<resources>
    <string name="app_name">Cyto Blood Donation</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="my_profile">My Profile</string>
    <string name="blood_donation">Blood Donation</string>
    <string name="diary">Diary</string>
    <string name="edit">Edit</string>
    <string name="about_you">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="sign_up">Sign up</string>
    <string name="make_an_appoinment">Make an Appointment</string>
    <string name="title_activity_blood_donation_places">Map</string>
</resources>
