<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Home"
    android:weightSum="1">

    <!-- Login progress -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logocyto"
        android:layout_weight="0.35" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        style="?android:textAppearanceSmall"
        android:id="@+id/my_profile_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/my_profile"
        android:textStyle="bold"
        android:background="#cb0000"
        android:textColor="#ffffff" />

    <Button
        style="?android:textAppearanceSmall"
        android:id="@+id/blood_donation_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/blood_donation"
        android:textStyle="bold"
        android:background="#cb0000"
        android:textColor="#ffffff" />

    <Button
        style="?android:textAppearanceSmall"
        android:id="@+id/diary_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/diary"
        android:textStyle="bold"
        android:background="#cb0000"
        android:textColor="#ffffff"
        android:layout_gravity="right" />

</LinearLayout>
